sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:13: error: ';' expected but 'while' found.
   	}while(inverse==true)
         ^AlgBubbleSort2:15: error: 'while' expected but '}' found.
}
^AlgBubbleSort2:20: error: Unmatched closing brace '}' ignored here
}
^